--- a/src/webapp/WEB-INF/pages/new.html
+++ b/src/webapp/WEB-INF/pages/new.html
@@ -34,7 +34,7 @@
 <form th:action="@{/successCreatedUser}"></form>
 
 
-<form th:action="@{/users}">
+<form th:action="@{/users/all}">
     <input type="submit" value="Back"/>
 </form>
 
