--- a/src/webapp/WEB-INF/pages/users.html
+++ b/src/webapp/WEB-INF/pages/users.html
@@ -25,7 +25,7 @@
             </td>
 
             <td>
-                <a th:href="@{/deleteUser/{id}(id=${user.getId()})}">Delete</a>
+                <a th:href="@{/users/deleteUser/{id}(id=${user.getId()})}">Delete</a>
 
             </td>
 
@@ -35,7 +35,7 @@
     </table>
 
 
-    <a th:href="@{users/add}">Add User</a>
+    <a th:href="@{/users/add}">Add User</a>
 
 
 
