--- a/src/webapp/WEB-INF/pages/showById.html
+++ b/src/webapp/WEB-INF/pages/showById.html
@@ -35,7 +35,7 @@
     </tr>
   </table>
   <br/>
-  <form th:action="@{/users}">
+  <form th:action="@{/users/all}">
     <button type="submit">back</button>
   </form>
 </div>
