--- a/src/webapp/WEB-INF/pages/successCreatedUser.html
+++ b/src/webapp/WEB-INF/pages/successCreatedUser.html
@@ -7,7 +7,7 @@
 <body>
 <h2>User is successfully created!</h2>
 <br/>
-<form th:action="@{/users}">
+<form th:action="@{/users/all}">
   <button type="submit" >back</button>
 </form>
 </body>
